--- a/public/index.html
+++ b/public/index.html
@@ -1,38 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#242424" />
+<head>
+    <meta charset="utf-8"/>
+    <meta content="width=device-width, initial-scale=1" name="viewport"/>
+    <meta content="#242424" name="theme-color"/>
     <meta
-      name="description"
-      content="A nomination planner for the rhythm game osu! - Made for the game mode osu!catch, used by the Beatmap Nominators (BN) and maintained by the Nomination Assessment Team (NAT)."
+            content="A nomination planner for the rhythm game osu! - Made for the game mode osu!catch, used by the Beatmap Nominators (BN) and maintained by the Nomination Assessment Team (NAT)."
+            name="description"
     />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <link rel="icon" sizes="16x16 32x32 64x64" href="%PUBLIC_URL%/favicon.ico">
-    <link rel="icon" type="image/png" sizes="196x196" href="%PUBLIC_URL%/favicon-192.png">
-    <link rel="icon" type="image/png" sizes="160x160" href="%PUBLIC_URL%/favicon-160.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="%PUBLIC_URL%/favicon-96.png">
-    <link rel="icon" type="image/png" sizes="64x64" href="%PUBLIC_URL%/favicon-64.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16.png">
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon-57.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="%PUBLIC_URL%/favicon-114.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="%PUBLIC_URL%/favicon-72.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="%PUBLIC_URL%/favicon-144.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="%PUBLIC_URL%/favicon-60.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="%PUBLIC_URL%/favicon-120.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="%PUBLIC_URL%/favicon-76.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="%PUBLIC_URL%/favicon-152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/favicon-180.png">
-    <meta name="msapplication-TileColor" content="#242424">
-    <meta name="msapplication-TileImage" content="%PUBLIC_URL%/favicon-144.png">
-    <meta name="msapplication-config" content="%PUBLIC_URL%/browserconfig.xml">
+    <link href="%PUBLIC_URL%/favicon.ico" rel="shortcut icon">
+    <link href="%PUBLIC_URL%/favicon.ico" rel="icon" sizes="16x16 32x32 64x64">
+    <link href="%PUBLIC_URL%/favicon-192.png" rel="icon" sizes="196x196" type="image/png">
+    <link href="%PUBLIC_URL%/favicon-160.png" rel="icon" sizes="160x160" type="image/png">
+    <link href="%PUBLIC_URL%/favicon-96.png" rel="icon" sizes="96x96" type="image/png">
+    <link href="%PUBLIC_URL%/favicon-64.png" rel="icon" sizes="64x64" type="image/png">
+    <link href="%PUBLIC_URL%/favicon-32.png" rel="icon" sizes="32x32" type="image/png">
+    <link href="%PUBLIC_URL%/favicon-16.png" rel="icon" sizes="16x16" type="image/png">
+    <link href="%PUBLIC_URL%/favicon-57.png" rel="apple-touch-icon">
+    <link href="%PUBLIC_URL%/favicon-114.png" rel="apple-touch-icon" sizes="114x114">
+    <link href="%PUBLIC_URL%/favicon-72.png" rel="apple-touch-icon" sizes="72x72">
+    <link href="%PUBLIC_URL%/favicon-144.png" rel="apple-touch-icon" sizes="144x144">
+    <link href="%PUBLIC_URL%/favicon-60.png" rel="apple-touch-icon" sizes="60x60">
+    <link href="%PUBLIC_URL%/favicon-120.png" rel="apple-touch-icon" sizes="120x120">
+    <link href="%PUBLIC_URL%/favicon-76.png" rel="apple-touch-icon" sizes="76x76">
+    <link href="%PUBLIC_URL%/favicon-152.png" rel="apple-touch-icon" sizes="152x152">
+    <link href="%PUBLIC_URL%/favicon-180.png" rel="apple-touch-icon" sizes="180x180">
+    <meta content="#242424" name="msapplication-TileColor">
+    <meta content="%PUBLIC_URL%/favicon-144.png" name="msapplication-TileImage">
+    <meta content="%PUBLIC_URL%/browserconfig.xml" name="msapplication-config">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link href="%PUBLIC_URL%/manifest.json" rel="manifest"/>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -43,19 +43,19 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Nomination Planner osu!catch</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+</head>
+<body>
+<noscript>You need to enable JavaScript to run this app.</noscript>
+<div id="root"></div>
+<!--
+  This HTML file is a template.
+  If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+  You can add webfonts, meta tags, or analytics to this file.
+  The build step will place the bundled scripts into the <body> tag.
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+  To begin the development, run `npm start` or `yarn start`.
+  To create a production bundle, use `npm run build` or `yarn build`.
+-->
+</body>
 </html>
